--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "expo": "49.0.0",
     "expo-router": "2.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.1"
+    "react-native": "0.72.1",
+    "twrnc": "3.6.1"
   },
   "devDependencies": {
     "@types/react": "18.2.14",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "tailwindcss": "3.3.2"
   },
   "engines": {
     "node": "18.16.1",
