feat: add eslint and run it

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,10 @@
     // Tailwind CSS IntelliSense
     "bradlc.vscode-tailwindcss",
     // Prettier - Code formatter
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    // ESLint
+    "dbaeumer.vscode-eslint",
+    // Prettier ESLint
+    "rvest.vs-code-prettier-eslint"
   ]
 }
