--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "expo": "49.0.2",
     "expo-router": "2.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.1",
-    "twrnc": "3.6.1"
+    "react-native": "0.72.1"
   },
   "devDependencies": {
     "@types/react": "18.2.14",
@@ -24,6 +23,7 @@
     "eslint-config-universe": "11.3.0",
     "prettier": "2.8.8",
     "tailwindcss": "3.3.2",
+    "twrnc": "3.6.2",
     "typescript": "5.1.6"
   },
   "engines": {
