--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "format": "prettier --write . --ignore-path .gitignore",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix --ignore-path .gitignore",
+    "check:writing": "alex ."
   },
   "dependencies": {
     "expo": "49.0.2",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/react": "18.2.14",
+    "alex": "11.0.0",
     "eslint": "8.44.0",
     "eslint-config-universe": "11.3.0",
     "prettier": "2.8.8",
