--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -20,14 +21,37 @@
     "react-native": "0.72.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "17.6.6",
+    "@commitlint/config-conventional": "17.6.6",
     "@types/react": "18.2.14",
     "alex": "11.0.0",
     "eslint": "8.44.0",
     "eslint-config-universe": "11.3.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.3",
     "prettier": "2.8.8",
     "tailwindcss": "3.3.2",
+    "tsc-files": "1.1.4",
     "twrnc": "3.6.2",
     "typescript": "5.1.6"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "tsc-files --noEmit"
+    ],
+    "*.json": [
+      "prettier --write"
+    ],
+    "*.{md,mdx,txt,html}": [
+      "prettier --write",
+      "alex"
+    ]
   },
   "engines": {
     "node": "18.16.1",
