--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format": "prettier --write . --ignore-path .gitignore",
     "lint": "eslint . --fix --ignore-path .gitignore",
     "check:types": "tsc --noEmit",
-    "check:writing": "alex ."
+    "check:writing": "alex .",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "expo": "49.0.2",
@@ -23,11 +25,15 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.6",
     "@commitlint/config-conventional": "17.6.6",
+    "@testing-library/react-native": "12.1.2",
+    "@types/jest": "29.5.3",
     "@types/react": "18.2.14",
     "alex": "11.0.0",
     "eslint": "8.44.0",
     "eslint-config-universe": "11.3.0",
     "husky": "8.0.3",
+    "jest": "29.6.1",
+    "jest-expo": "49.0.0",
     "lint-staged": "13.2.3",
     "prettier": "2.8.8",
     "tailwindcss": "3.3.2",
