--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "papers",
   "version": "0.0.0",
   "private": true,
-  "main": "expo-router/entry",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "storybook": "sb-rn-get-stories && cross-env STORYBOOK_ENABLED='true' expo start",
     "format": "prettier --write . --ignore-path .gitignore",
     "lint": "eslint . --fix --ignore-path .gitignore",
     "check:types": "tsc --noEmit",
@@ -18,19 +18,31 @@
   },
   "dependencies": {
     "expo": "49.0.2",
+    "expo-constants": "14.4.2",
     "expo-router": "2.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.1"
+    "react-native": "0.72.3"
   },
   "devDependencies": {
+    "@babel/core": "7.22.9",
     "@commitlint/cli": "17.6.6",
     "@commitlint/config-conventional": "17.6.6",
+    "@storybook/addon-ondevice-actions": "6.5.4",
+    "@storybook/addon-ondevice-backgrounds": "6.5.4",
+    "@storybook/addon-ondevice-controls": "6.5.4",
+    "@storybook/addon-ondevice-notes": "6.5.4",
+    "@storybook/cli": "7.0.27",
+    "@storybook/react": "^7.0.27",
+    "@storybook/react-native": "6.5.4",
+    "@storybook/types": "7.0.27",
     "@testing-library/react-native": "12.1.2",
     "@types/jest": "29.5.3",
     "@types/react": "18.2.14",
     "alex": "11.0.0",
+    "cross-env": "7.0.3",
     "eslint": "8.44.0",
     "eslint-config-universe": "11.3.0",
+    "eslint-plugin-storybook": "0.6.12",
     "husky": "8.0.3",
     "jest": "29.6.1",
     "jest-expo": "49.0.0",
