--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "storybook": "sb-rn-get-stories && cross-env STORYBOOK_ENABLED='true' expo start",
-    "format": "prettier --write . --ignore-path .gitignore",
-    "lint": "eslint . --fix --ignore-path .gitignore",
+    "format": "prettier . --write",
+    "lint": "eslint . --fix",
     "check:types": "tsc --noEmit",
     "check:writing": "alex .",
     "test": "jest",
@@ -42,6 +42,7 @@
     "cross-env": "7.0.3",
     "eslint": "8.44.0",
     "eslint-config-universe": "11.3.0",
+    "eslint-plugin-log-filenames": "1.0.6",
     "eslint-plugin-storybook": "0.6.12",
     "husky": "8.0.3",
     "jest": "29.6.1",
