--- a/package.json
+++ b/package.json
@@ -50,19 +50,13 @@
     "lint-staged": "13.2.3",
     "prettier": "2.8.8",
     "tailwindcss": "3.3.2",
-    "tsc-files": "1.1.4",
     "twrnc": "3.6.2",
     "typescript": "5.1.6"
   },
   "lint-staged": {
-    "*.{js,jsx}": [
+    "*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "eslint --fix"
-    ],
-    "*.{ts,tsx}": [
-      "prettier --write",
-      "eslint --fix",
-      "tsc-files --noEmit"
     ],
     "*.json": [
       "prettier --write"
