--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "expo": "49.0.2",
+    "expo": "49.0.5",
     "expo-constants": "14.4.2",
     "expo-router": "2.0.0",
     "react": "18.2.0",
@@ -25,32 +25,33 @@
   },
   "devDependencies": {
     "@babel/core": "7.22.9",
-    "@commitlint/cli": "17.6.6",
-    "@commitlint/config-conventional": "17.6.6",
+    "@commitlint/cli": "17.6.7",
+    "@commitlint/config-conventional": "17.6.7",
     "@storybook/addon-ondevice-actions": "6.5.4",
     "@storybook/addon-ondevice-backgrounds": "6.5.4",
     "@storybook/addon-ondevice-controls": "6.5.4",
     "@storybook/addon-ondevice-notes": "6.5.4",
-    "@storybook/cli": "7.0.27",
-    "@storybook/react": "^7.0.27",
+    "@storybook/cli": "7.1.1",
+    "@storybook/react": "7.1.1",
     "@storybook/react-native": "6.5.4",
-    "@storybook/types": "7.0.27",
-    "@testing-library/react-native": "12.1.2",
+    "@storybook/types": "7.1.1",
+    "@testing-library/react-native": "12.1.3",
     "@types/jest": "29.5.3",
-    "@types/react": "18.2.14",
+    "@types/react": "18.2.17",
     "alex": "11.0.0",
     "cross-env": "7.0.3",
-    "eslint": "8.44.0",
+    "eslint": "8.45.0",
     "eslint-config-universe": "11.3.0",
     "eslint-plugin-log-filenames": "1.0.6",
-    "eslint-plugin-storybook": "0.6.12",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-storybook": "0.6.13",
     "husky": "8.0.3",
-    "jest": "29.6.1",
+    "jest": "29.6.2",
     "jest-expo": "49.0.0",
     "lint-staged": "13.2.3",
-    "prettier": "2.8.8",
-    "tailwindcss": "3.3.2",
-    "twrnc": "3.6.2",
+    "prettier": "3.0.0",
+    "tailwindcss": "3.3.3",
+    "twrnc": "3.6.3",
     "typescript": "5.1.6"
   },
   "lint-staged": {
@@ -70,5 +71,5 @@
     "node": "18.16.1",
     "npm": "This project is configured to use pnpm"
   },
-  "packageManager": "pnpm@8.6.7"
+  "packageManager": "pnpm@8.6.10"
 }
