--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "lint": "eslint . --fix",
     "check:types": "tsc --noEmit",
     "check:writing": "alex .",
+    "generate-types": "supabase gen types typescript --project-id cgyqacvabseqensdfyzx > src/services/supabase/types/generated/database.ts",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@supabase/supabase-js": "2.31.0",
     "expo": "49.0.5",
     "expo-constants": "14.4.2",
     "expo-router": "2.0.0",
+    "expo-secure-store": "12.3.1",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-url-polyfill": "2.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.22.9",
