--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
-.env*.local
+.env*
+.flaskenv*
+!.env.project
+!.env.vault
 
 # expo
 .expo/
