--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "check:writing": "alex .",
     "generate-types": "supabase gen types typescript --project-id cgyqacvabseqensdfyzx > src/services/supabase/types/generated/database.ts",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "pull:env": "dotenv-vault pull"
   },
   "dependencies": {
     "@supabase/supabase-js": "2.31.0",
@@ -44,6 +45,7 @@
     "@types/react": "18.2.17",
     "alex": "11.0.0",
     "cross-env": "7.0.3",
+    "dotenv-vault": "1.25.0",
     "eslint": "8.45.0",
     "eslint-config-universe": "11.3.0",
     "eslint-plugin-log-filenames": "1.0.6",
