--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "pull:env": "dotenv-vault pull"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "9.3.10",
     "@supabase/supabase-js": "2.31.0",
+    "@tanstack/react-query": "4.32.0",
     "expo": "49.0.5",
     "expo-constants": "14.4.2",
     "expo-router": "2.0.0",
@@ -40,6 +42,7 @@
     "@storybook/react": "7.1.1",
     "@storybook/react-native": "6.5.4",
     "@storybook/types": "7.1.1",
+    "@tanstack/eslint-plugin-query": "4.32.1",
     "@testing-library/react-native": "12.1.3",
     "@types/jest": "29.5.3",
     "@types/react": "18.2.17",
@@ -77,5 +80,5 @@
     "node": "18.16.1",
     "npm": "This project is configured to use pnpm"
   },
-  "packageManager": "pnpm@8.6.10"
+  "packageManager": "pnpm@8.6.12"
 }
