chore: use .env instead of app.config to switch between storybook and papers

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "storybook": "sb-rn-get-stories && cross-env STORYBOOK_ENABLED='true' expo start",
+    "storybook": "sb-rn-get-stories && cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start",
     "format": "prettier . --write",
     "lint": "eslint . --fix",
     "check:types": "tsc --noEmit",
@@ -23,7 +23,6 @@
     "@supabase/supabase-js": "2.32.0",
     "@tanstack/react-query": "4.32.6",
     "expo": "49.0.7",
-    "expo-constants": "14.4.2",
     "expo-router": "2.0.0",
     "expo-secure-store": "12.3.1",
     "react": "18.2.0",
