--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,10 @@
   "editor.tabSize": 2, // Same as .prettierrc tabWidth value
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true, // Run eslint --fix on save
-    "source.organizeImports": true // Remove unused imports on save
-  },
+  "editor.codeActionsOnSave": [
+    "source.organizeImports", // Remove unused imports on save
+    "source.fixAll.eslint" // Run eslint --fix on save
+  ],
   // Add intellisense to twrnc classes used in the style prop
   "tailwindCSS.classAttributes": ["style"],
   "tailwindCSS.experimental.classRegex": [
