--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-secure-store": "12.3.1",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-svg": "13.9.0",
     "react-native-url-polyfill": "2.0.0"
   },
   "devDependencies": {
